# sam3-realtime

./: .gitignore  README.md  pixi.toml  pyproject.toml
examples/: sam3_stream_predictor_example.ipynb
sam3/: model_builder.py
sam3/model/: sam3_stream_inference.py
sam3/train/data/: sam3_image_dataset.py
scripts/inference/: saving_utils.py  stream_handler.py  video_stream.py  yarp_stream.py
